# Faceit_esayDemo

./: .replit  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/memory/: MEMORY.md  cross-platform-native-binaries.md  github-push-from-replit.md
.github/workflows/: build-windows.yml
artifacts/api-server/src/routes/: demos.ts  index.ts  settings.ts
artifacts/demo-manager/: index.html  package.json  vite.config.ts
artifacts/demo-manager/.replit-artifact/: artifact.toml
artifacts/demo-manager/src/: App.tsx  index.css
artifacts/demo-manager/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/demo-manager/src-tauri/capabilities/: default.json
artifacts/demo-manager/src-tauri/src/: lib.rs  main.rs
artifacts/demo-manager/src/components/: layout.tsx
artifacts/demo-manager/src/lib/: demo-parser.ts
artifacts/demo-manager/src/types/: demo.ts
attached_assets/: Pasted--Info-Looking-up-installed-tauri-packages-to-check-mism_1781258084547.txt  Pasted--faceit-demo-manager-1-0-0-dist-win-D-a-Faceit-esayDemo_1781211839085.txt  Pasted--faceit-demo-manager-1-0-0-dist-win-D-a-Faceit-esayDemo_1781213020205.txt  Pasted--workspace-demo-manager-0-0-0-build-D-a-Faceit-esayDemo_1781210642521.txt  Pasted--workspace-demo-manager-0-0-0-build-D-a-Faceit-esayDemo_1781211191061.txt  Pasted-Info-Looking-up-installed-tauri-packages-to-check-misma_1781258316320.txt  Pasted-Zukunftsf-hige-lokale-FACEIT-Demo-App-f-r-CS2-Kurzfazit_1781181493314.txt
electron/: README.md  electron-builder.json  package.json  tsconfig.main.json
electron/src/: main.ts  preload.ts
lib/api-spec/: openapi.yaml
(+15 files in other folders)
