[package]
name = "cs2-demo-manager"
version = "0.1.0"
edition = "2021"
description = "CS2 Demo Manager - lokaler Demo-Viewer und FACEIT-Launcher"
authors = []
license = ""

[lib]
name = "cs2_demo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# .dem.gz decompression
flate2 = "1"
# .dem.zst decompression (FACEIT native format)
zstd = "0.13"
# HTTP downloads for FACEIT demos
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "json"] }
# Async runtime (re-exports Tauri's tokio)
tokio = { version = "1", features = ["full"] }
# Snappy decompression for CS2 demo packets
snap = "1"
# CS2 demo entity parser — voice slot extraction via entity.index()
# IMPORTANT: default-features = false to avoid mimalloc global allocator conflict with Tauri
source2-demo = { version = "0.4", default-features = false, features = ["cs2"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows registry access — used in detect_steam_path
winreg = "0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
